tests/rosetta/transpiler/Scala/flipping-bits-game.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/flipping-bits-game.scala:131: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
        val diff: BigInt = if (board(i)(BigInt(0)) != target(i)(BigInt(0))) BigInt(1) else BigInt(0)
                                     ^
/workspace/mochi/tests/rosetta/transpiler/Scala/flipping-bits-game.scala:131: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
        val diff: BigInt = if (board(i)(BigInt(0)) != target(i)(BigInt(0))) BigInt(1) else BigInt(0)
                                                             ^
/workspace/mochi/tests/rosetta/transpiler/Scala/flipping-bits-game.scala:137: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
        val diff: BigInt = if (board(BigInt(0))(j) != target(BigInt(0))(j)) BigInt(1) else BigInt(0)
                                           ^
/workspace/mochi/tests/rosetta/transpiler/Scala/flipping-bits-game.scala:137: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
        val diff: BigInt = if (board(BigInt(0))(j) != target(BigInt(0))(j)) BigInt(1) else BigInt(0)
                                                                   ^
/workspace/mochi/tests/rosetta/transpiler/Scala/flipping-bits-game.scala:186: error: value toInt is not a member of Any
      seed = BigInt((res((BigInt(1)).toInt)).toInt)
                                             ^
/workspace/mochi/tests/rosetta/transpiler/Scala/flipping-bits-game.scala:193: error: value toInt is not a member of Any
          seed = BigInt((sres((BigInt(1)).toInt)).toInt)
                                                  ^
/workspace/mochi/tests/rosetta/transpiler/Scala/flipping-bits-game.scala:206: error: value toInt is not a member of Any
      val moves: BigInt = BigInt((ares((BigInt(1)).toInt)).toInt)
                                                           ^
7 errors found
